[package]
name = "unpac"
version = "1.0.0"
authors = ["super-continent"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
structopt = "0"
miniserde = "0"
byteorder = "1"
nom = "6"
thiserror = "1"
rayon = "1.5.0"
